# RSock

Iperf/: run-iperf-client.sh  run-iperf-server.sh
olsr-lte-wifi/epc/: olsrd_epc.conf  start-up-epc.sh
olsr-lte-wifi/epc/olsrd-lte-wifi-epc/lib/nameservice/src/: nameservice.c
olsr-lte-wifi/epc/olsrd-lte-wifi-epc/src/: net_olsr.c
olsr-lte-wifi/epc/olsrd-lte-wifi-epc/src/unix/: ifnet.c
olsr-lte-wifi/epc/release/: libhrpproto.so.tar  olsrd.tar
olsr-lte-wifi/phones/lte/: olsrd.conf
olsr-lte-wifi/phones/wifi/: olsrd.conf
rsock-android/: CMakeLists.txt  ReadME.txt  build.sh  dist_to_phones.sh  olsrd.conf  start-up.sh
rsock-android/src/: CMakeLists.txt  common.h  deploy.sh  hrpEexception.h  hrpMessages.cpp  hrpMessages.h  hrpNode.cpp  hrpNode.h  ifaddrs-android.cpp  ifaddrs-android.h
rsock-android/src/api/: HrpAPIClient.cpp  HrpAPIClient.h  HrpAPIPacket.cpp  HrpAPIPacket.h  HrpAPIServer.cpp  HrpAPIServer.h  TestAPI.cpp  TestAPI.h
rsock-android/src/daemon/: daemon.cpp  daemon.h  test_client.cpp  test_gns.cpp  test_graph.cpp  test_main.cpp  test_olsr.cpp
rsock-android/src/gns/: gns_service_client.cpp  gns_service_client.h
rsock-android/src/hrp/: HrpCore.cpp  HrpCore.h  HrpGraph.cpp  HrpGraph.h  HrpRouter.cpp  HrpRouter.h  MetaDataExchanger.cpp  MetaDataExchanger.h  TopologyManager.cpp  TopologyManager.h  TxrxEngine.cpp  TxrxEngine.h
rsock-android/src/jni/: main_JniTest.cpp  main_JniTest.h
rsock-android/src/mve/: DelayEstimator.cpp  DelayEstimator.h  MVECore.cpp  MVECore.h  MVEEstimator.cpp  MVEEstimator.h
rsock-android/src/proto/: CMakeLists.txt  HrpMsg.proto
rsock-android/src/rm/: FILearner.cpp  FILearner.h  PILearner.cpp  PILearner.h  RMCore.cpp  RMCore.h
rsock-android/tests/: CMakeLists.txt  testHrpCore.cpp  testHrpGraph.cpp  testMVEEstimator.cpp  testPILearnerSpeed.cpp  testRM.cpp
rsock-lte/: README.txt  install-olsrd-epc.sh  olsrd_epc.conf  olsrd_phone.conf  start-up-epc.sh  start-up-phone.sh
rsock-multi-interface/: .gitignore  CMakeLists.txt  ReadME.txt  dist_to_phones.sh  killall.sh  olsrd.conf  olsrd_epc.conf  start-up-nuk.sh  start-up-phone.sh
rsock-multi-interface/include/: ReadMe.txt
rsock-multi-interface/src/: CMakeLists.txt  common.h  hrpEexception.h  hrpMessages.cpp  hrpMessages.h  hrpNode.cpp  hrpNode.h  ifaddrs-android.cpp  ifaddrs-android.h
rsock-multi-interface/src/api/: HrpAPIClient.cpp  HrpAPIClient.h  HrpAPIPacket.cpp  HrpAPIPacket.h  HrpAPIServer.cpp  HrpAPIServer.h  TestAPI.cpp  TestAPI.h
rsock-multi-interface/src/daemon/: daemon.cpp  daemon.h  test_client.cpp  test_gns.cpp  test_graph.cpp  test_main.cpp  test_olsr.cpp
rsock-multi-interface/src/gns/: GnsServiceClient.cpp  GnsServiceClient.h
rsock-multi-interface/src/hrp/: HrpCore.cpp  HrpCore.h  HrpGraph.cpp  HrpGraph.h  HrpRouter.cpp  HrpRouter.h  MetaDataExchanger.cpp  MetaDataExchanger.h  TopologyManager.cpp  TopologyManager.h  TxrxEngine.cpp  TxrxEngine.h
rsock-multi-interface/src/mve/: DelayEstimator.cpp  DelayEstimator.h  MVECore.cpp  MVECore.h  MVEEstimator.cpp  MVEEstimator.h
rsock-multi-interface/src/proto/: HrpMsg.proto
rsock-multi-interface/src/rm/: FILearner.cpp  FILearner.h  PILearner.cpp  PILearner.h  RMCore.cpp  RMCore.h
rsock-multi-interface/tests/: testHrpMessages.cpp  testMVECore.cpp  testPILearner.cpp  testTxrxEngine.cpp
