INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER HrpMsg.proto)

if (ANDROID)
	ADD_LIBRARY(hrpproto STATIC ${PROTO_HEADER} ${PROTO_SRC})
else()
	ADD_LIBRARY(hrpproto SHARED ${PROTO_HEADER} ${PROTO_SRC})
endif()

TARGET_LINK_LIBRARIES(hrpproto ${PROTOBUF_LIBRARY})
install(TARGETS hrpproto DESTINATION lib)